It will add paragraph

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
+    <div class="container">
     <div class="logo">
         <img src="images/logoBig.png" alt="logo">
     </div>
     <div class="description">
-<h1>
+<p>
     We Provide The Best Food At The <span>Right Price</span>
-</h1>
+</p>
 
     </div>
+</div>
 </body>
 
 </html>
