It will add paragraphs and image

--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 
 <body>
     <div class="container">
-    <div class="logo">
-        <img src="images/logoBig.png" alt="logo">
-    </div>
-    <div class="description">
-<p>
-    We Provide The Best Food At The <span>Right Price</span>
-</p>
+        <div class="logo">
+            <img src="images/logoBig.png" alt="logo">
+        </div>
+        <div class="description">
+            <h1>
+                We Provide The Best Food At The <span>Right Price</span>
+            </h1>
+        </div><br><br><br><br><br>
 
     </div>
-</div>
+    <div id="fast foods">
+        <img src="images/fastFood1.jpg" alt="fastFood1">
+        <img src="images/fastFood2.jpg" alt="fastFood2">
+        <h1>Fast Food</h1>
+        <h2>You'll love our delicous food</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati delectus est consequatur, esse rem
+            laboriosam totam quidem eos maxime vero vel facilis ex odit possimus aspernatur, magni adipisci dolorem
+            nobis?</p>
+    </div>
+    <div id="drinks">
+        <img src="images/drink1.jpg" alt="drink1">
+        <img src="images/drink2.jpg" alt="drink2">
+        <h1>Drinks</h1>
+        <h2>We also produce delicious drinks</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsum ab cum aliquid vitae, aliquam quidem sit velit explicabo nostrum repudiandae nihil est voluptas officia neque ut dolorem officiis hic.</p>
+    </div>
 </body>
 
 </html>
