It will add html page layout,logo image codes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anitas-Kitchen</title>
+    <title>Anita's kitchen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    
+    <main>
+        <div class="introductory">
+            <div class="logo">
+                <img src="images/logoBig.png" alt="logo">
+            </div>
+            <div class="description">
+                <!-- <p>We Provide The Best Food <br> At The <b>Right Price</b></p> -->
+                <p>We Provide The Best Food <br>
+                    At The <b>Right Price</b></p>
+            </div>
+        </div>
+    </main><br><br><br><br><br>
+
+    <div class="food2">
+
+
+        <div class="block">
+            <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
+            <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
+        </div>
+        <div class="food">
+            <h1>Fast Food</h1>
+            <h2>You'll love our delicious fast food</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Et ea ipsum, iste magni, aperiam eligendi id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At soluta quisquam minima.</p>
+        </div>
+
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div>
+        <img src="images/drink1.jpg" alt="d1">
+        <img src="images/drink2.jpg" alt="d2">
+        <h1>Drinks</h1>
+        <h2>We also produce delicious drinks</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, ratione consequuntur. Illo voluptatum
+            dignissimos molestias nisi. Iusto itaque unde molestias cumque minus? Mollitia corrupti assumenda tempore
+            tenetur harum odit aperiam?</p>
+    </div>
+
+</body>
 
 </html>
