It will add paragraphs and images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="images/logoBig.png" alt="logo">
             </div>
             <div class="description">
-                <!-- <p>We Provide The Best Food <br> At The <b>Right Price</b></p> -->
+                <!-- <p>We Provide The Best Food <br><br><br> At The <b>Right Price</b></p> -->
                 <p>We Provide The Best Food <br>
                     At The <b>Right Price</b></p>
             </div>
@@ -24,8 +24,6 @@
     </main><br><br><br><br><br>
 
     <div class="food2">
-
-
         <div class="block">
             <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
             <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
@@ -33,19 +31,39 @@
         <div class="food">
             <h1>Fast Food</h1>
             <h2>You'll love our delicious fast food</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Et ea ipsum, iste magni, aperiam eligendi id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At soluta quisquam minima.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Et ea ipsum, iste magni, aperiam eligendi
+                id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At soluta
+                quisquam minima.</p>
         </div>
-
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+    <div class="soft">
+        <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
+        <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
+    </div>
     <div>
-        <img src="images/drink1.jpg" alt="d1">
-        <img src="images/drink2.jpg" alt="d2">
         <h1>Drinks</h1>
         <h2>We also produce delicious drinks</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, ratione consequuntur. Illo voluptatum
             dignissimos molestias nisi. Iusto itaque unde molestias cumque minus? Mollitia corrupti assumenda tempore
             tenetur harum odit aperiam?</p>
     </div>
+    <div class="snacks">
+        <img src="images/beefBurger.jpg" alt="s1">
+        <img src="images/chickenBurger.jpg" alt="s2">
+        <img src="images/chickenPizza.jpg" alt="s3">
+    </div>
+    <div class="customers">
+        <h2>Our Happy Customers</h2>
+        <p>Great food, menu is awesome, there foods are not only great but also in the right price. I'll highly
+            recommend them :|</p>
+        <img src="images/p1.png" alt="p1">
+        <img src="images/p2.png" alt="p2">
+        <img src="images/p3.png" alt="p3">
+    </div>
+<div class="menu">
+    <h2>About Menu</h2>
+    <p>We are a menu a little team of 7 members. Placeat natus repellendus aperiam culpa mollitia, fugiat voluptates sequi ex voluptas tempora in.</p>
+</div>
 
 </body>
 
