It will add the class snacks section images and paragraphs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </main><br><br><br><br><br>
 
-    <div class="food2">
+    <div class="takeaway">
         <div class="block">
             <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
             <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
@@ -35,22 +35,37 @@
                 id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At soluta
                 quisquam minima.</p>
         </div>
-    </div>
-    <div class="soft">
-        <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
-        <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
-    </div>
-    <div>
-        <h1>Drinks</h1>
-        <h2>We also produce delicious drinks</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, ratione consequuntur. Illo voluptatum
-            dignissimos molestias nisi. Iusto itaque unde molestias cumque minus? Mollitia corrupti assumenda tempore
-            tenetur harum odit aperiam?</p>
-    </div>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="beverages">
+        <div class="soft">
+            <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
+            <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
+        </div>
+        <div class="drinks">
+            <h1>Drinks</h1>
+            <h2>We also produce delicious drinks</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione consequuntur. Illo
+                voluptatum
+                dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti
+                assumenda
+                tempore
+                tenetur harum odit aperiam?</p>
+        </div>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
     <div class="snacks">
-        <img src="images/beefBurger.jpg" alt="s1">
-        <img src="images/chickenBurger.jpg" alt="s2">
-        <img src="images/chickenPizza.jpg" alt="s3">
+        <div class="beef">
+            <img src="images/beefBurger.jpg" alt="s1">
+            <p>Beef Burger</p>
+        </div>
+        <div class="chicken">
+            <img src="images/chickenBurger.jpg" alt="s2">
+            <p>Chicken Burger</p>
+        </div>
+        <div class="pizza">
+            <img src="images/chickenPizza.jpg" alt="s3">
+            <p>Chicken Pizza</p>
+        </div>
     </div>
     <div class="customers">
         <h2>Our Happy Customers</h2>
@@ -60,10 +75,11 @@
         <img src="images/p2.png" alt="p2">
         <img src="images/p3.png" alt="p3">
     </div>
-<div class="menu">
-    <h2>About Menu</h2>
-    <p>We are a menu a little team of 7 members. Placeat natus repellendus aperiam culpa mollitia, fugiat voluptates sequi ex voluptas tempora in.</p>
-</div>
+    <div class="menu">
+        <h2>About Menu</h2>
+        <p>We are a menu a little team of 7 members. Placeat natus repellendus aperiam culpa mollitia, fugiat voluptates
+            sequi ex voluptas tempora in.</p>
+    </div>
 
 </body>
 
