It wiil add images and paragraphs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anita's kitchen</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -16,71 +19,109 @@
                 <img src="images/logoBig.png" alt="logo">
             </div>
             <div class="description">
-                <!-- <p>We Provide The Best Food <br><br><br> At The <b>Right Price</b></p> -->
                 <p>We Provide The Best Food <br>
                     At The <b>Right Price</b></p>
             </div>
         </div>
-    </main><br><br><br><br><br>
+    </main><br>
+    <div>
+        <div class="container">
+            <div class="takeaway">
+                <div class="block card">
+                    <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
+                    <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
+                </div>
+                <div class="food">
+                    <h1>Fast Food</h1>
+                    <h2>You'll love our delicious fast food</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Et ea ipsum, iste magni, aperiam
+                        eligendi
+                        id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At
+                        soluta
+                        quisquam minima.</p>
+                </div>
+            </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <div class="beverages">
+                <div class="soft card">
+                    <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
+                    <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
+                </div>
+                <div class="drinks">
+                    <h1>Drinks</h1>
+                    <h2>We also produce delicious drinks</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione consequuntur.
+                        Illo
+                        voluptatum
+                        dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti
+                        assumenda
+                        tempore
+                        tenetur harum odit aperiam?</p>
+                </div>
+            </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
 
-    <div class="takeaway">
-        <div class="block">
-            <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
-            <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
+        <div class="brand">
+           
+            <div class="snacks">
+                <div class="beef">
+                    <img src="images/beefBurger.jpg" alt="s1">
+                    <p>Beef Burger</p>
+                </div>
+                <div class="chicken">
+                    <img src="images/chickenBurger.jpg" alt="s2">
+                    <p>Chicken Burger</p>
+                </div>
+                <div class="pizza">
+                    <img src="images/chickenPizza.jpg" alt="s3">
+                    <p>Chicken Pizza</p>
+                </div>
+            </div>
         </div>
-        <div class="food">
-            <h1>Fast Food</h1>
-            <h2>You'll love our delicious fast food</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Et ea ipsum, iste magni, aperiam eligendi
-                id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At soluta
-                quisquam minima.</p>
+        <div class="recommended card container">
+            <div class="row">
+                <div class="customers col-md-6">
+                    <h2>Our Happy Customers</h2>
+                    <p>Great food, menu is awesome, there foods are not only great but<br> also in the right price. I'll
+                        highly
+                        recommend them :|</p>
+                    <div class="visitors">
+                        <img src="images/p1.png" alt="p1">
+                        <img src="images/p2.png" alt="p2">
+                        <img src="images/p3.png" alt="p3">
+                    </div>
+                </div>
+                <div class="vl col-md-2"></div>
+                <div class="menu col-md-4">
+                    <h2>About Menu</h2>
+                    <p>We are a menu a little team of 7 members.<br> Placeat natus repellendus aperiam culpa
+                        mollitia,<br>
+                        fugiat
+                        voluptates
+                        sequi ex voluptas tempora in.</p>
+                </div>
+            </div>
         </div>
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div class="beverages">
-        <div class="soft">
-            <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
-            <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
-        </div>
-        <div class="drinks">
-            <h1>Drinks</h1>
-            <h2>We also produce delicious drinks</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione consequuntur. Illo
-                voluptatum
-                dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti
-                assumenda
-                tempore
-                tenetur harum odit aperiam?</p>
-        </div>
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <div class="snacks">
-        <div class="beef">
-            <img src="images/beefBurger.jpg" alt="s1">
-            <p>Beef Burger</p>
+        <br><br><br>
+    </div>
+    <div class="footer">
+        <div class="email">
+
+            <form>
+                <p>Get our daily food items delivered to your email</p><br>
+                <input type="text" placeholder="your email">
+
+                <!-- <input type="text" id="lname" name="lname" value=""> -->
+                <button class="btn btn-danger">Suscribe</button>
+            </form>
         </div>
-        <div class="chicken">
-            <img src="images/chickenBurger.jpg" alt="s2">
-            <p>Chicken Burger</p>
-        </div>
-        <div class="pizza">
-            <img src="images/chickenPizza.jpg" alt="s3">
-            <p>Chicken Pizza</p>
+
+        <div class="signs">
+            <img src="images/facebook.png" alt="f">
+            <img src="images/twitter.png" alt="t">
+            <img src="images/pinterest.png" alt="p">
         </div>
     </div>
-    <div class="customers">
-        <h2>Our Happy Customers</h2>
-        <p>Great food, menu is awesome, there foods are not only great but also in the right price. I'll highly
-            recommend them :|</p>
-        <img src="images/p1.png" alt="p1">
-        <img src="images/p2.png" alt="p2">
-        <img src="images/p3.png" alt="p3">
-    </div>
-    <div class="menu">
-        <h2>About Menu</h2>
-        <p>We are a menu a little team of 7 members. Placeat natus repellendus aperiam culpa mollitia, fugiat voluptates
-            sequi ex voluptas tempora in.</p>
-    </div>
-
 </body>
 
 </html>
