--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             </div>
         </div>
     </main><br>
+    <div class="subdivisions">
+        <div>happy</div>
+        <div>breakfast</div>
+        <div>lunch</div>
+        <div>dinner</div>
+    </div>
     <div>
         <div class="container">
             <div class="takeaway">
@@ -41,27 +47,34 @@
                         quisquam minima.</p>
                 </div>
             </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <div class="beverages">
-                <div class="soft card">
+            <!-- <div class="beverages">
+                <div class="soft">
+                    <div></div>
                     <img style="width:300px;height:160px;margin-left:15px;" src="images/drink1.jpg" alt="d1">
                     <img style="width:300px;height:160px;margin-left:15px;" src="images/drink2.jpg" alt="d2">
-                </div>
-                <div class="drinks">
-                    <h1>Drinks</h1>
-                    <h2>We also produce delicious drinks</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione consequuntur.
-                        Illo
-                        voluptatum
-                        dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti
-                        assumenda
-                        tempore
-                        tenetur harum odit aperiam?</p>
-                </div>
-            </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        </div>
+                </div> -->
 
-        <div class="brand">
-           
+        </div>
+        <div class="drinks">
+            <h1>Drinks</h1>
+            <h2>We also produce delicious drinks</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione consequuntur.
+                Illo
+                voluptatum
+                dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti
+                assumenda
+                tempore
+                tenetur harum odit aperiam?</p>
+        </div>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+    <div class="burger"><br><br>
+        <div class="brand card container">
+            <!-- <button class="btn btn-danger">Suscribe</button>
+            <button class="btn btn-danger">Suscribe</button>
+            <button class="btn btn-danger">Suscribe</button>
+            <button class="btn btn-danger">Suscribe</button>
+            -->
             <div class="snacks">
                 <div class="beef">
                     <img src="images/beefBurger.jpg" alt="s1">
@@ -77,32 +90,33 @@
                 </div>
             </div>
         </div>
-        <div class="recommended card container">
-            <div class="row">
-                <div class="customers col-md-6">
-                    <h2>Our Happy Customers</h2>
-                    <p>Great food, menu is awesome, there foods are not only great but<br> also in the right price. I'll
-                        highly
-                        recommend them :|</p>
-                    <div class="visitors">
-                        <img src="images/p1.png" alt="p1">
-                        <img src="images/p2.png" alt="p2">
-                        <img src="images/p3.png" alt="p3">
-                    </div>
-                </div>
-                <div class="vl col-md-2"></div>
-                <div class="menu col-md-4">
-                    <h2>About Menu</h2>
-                    <p>We are a menu a little team of 7 members.<br> Placeat natus repellendus aperiam culpa
-                        mollitia,<br>
-                        fugiat
-                        voluptates
-                        sequi ex voluptas tempora in.</p>
+    </div>
+    <div class="recommended card container">
+        <div class="row">
+            <div class="customers col-md-6">
+                <h2>Our Happy Customers</h2>
+                <p>Great food, menu is awesome, there foods are not only great but<br> also in the right price. I'll
+                    highly
+                    recommend them :|</p>
+                <div class="visitors">
+                    <img src="images/p1.png" alt="p1">
+                    <img src="images/p2.png" alt="p2">
+                    <img src="images/p3.png" alt="p3">
                 </div>
             </div>
+            <div class="vl col-md-2"></div>
+            <div class="menu col-md-4">
+                <h2>About Menu</h2>
+                <p>We are a menu a little team of 7 members.<br> Placeat natus repellendus aperiam culpa
+                    mollitia,<br>
+                    fugiat
+                    voluptates
+                    sequi ex voluptas tempora in.</p>
+            </div>
         </div>
+    </div>
 
-        <br><br><br>
+    <br><br><br>
     </div>
     <div class="footer">
         <div class="email">
