It will add paragraphs,images and links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         </div>
     </main>
     <div class="subdivisions">
-        <div class="happy">Happy</div>
+        <div class="happy">
+            <div>
+                <h2>Happy Hour</h2>
+            </div>
+            <div style="margin-top: 12%; color: white;">Party Time</div>
+        </div>
         <div class="breakfast">Breakfast</div>
         <div class="lunch">Lunch</div>
         <div class="dinner">Dinner</div>
@@ -40,7 +45,7 @@
     <div>
         <div class="container">
             <div class="takeaway">
-                <div class="block card">
+                <div class="block ">
                     <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood1.jpg" alt="f1">
                     <img style="width:300px;height:160px;margin-left:15px;" src="images/fastFood2.jpg" alt="f2">
                 </div>
@@ -62,14 +67,8 @@
                         <h2>We also produce delicious drinks</h2>
 
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione
-                            consequuntur.
-                            Illo
-                            voluptatum
-                            dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia
-                            corrupti
-                            assumenda
-                            tempore
-                            tenetur harum odit aperiam?
+                            consequuntur. Illo voluptatum dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti assumenda
+                            tempore tenetur harum odit aperiam?
                         </p>
                     </div>
                     <div class="block card">
@@ -91,7 +90,7 @@
             <div class="brand card container">
                 <div>
                     <nav class="nav nav-pills nav-fill">
-                        <a class="nav-item nav-link" style="background-color: #fafafa;" href="#"><span style="color:;">
+                        <a class="nav-item nav-link" style="background-color: #fafafa;" href="#"><span>
                                 Fast Food</span></a>
                         <a class="nav-item nav-link disabled" style="background-color: #BDBDBD;" href="#">Drinks</a>
                         <a class="nav-item nav-link disabled" style="background-color: #BDBDBD;" href="#">Chicken</a>
@@ -149,8 +148,6 @@
             <form>
                 <p>Get our daily food items delivered to your email</p><br>
                 <input type="text" placeholder="your email">
-
-                <!-- <input type="text" id="lname" name="lname" value=""> -->
                 <button class="click">Suscribe</button>
             </form>
         </div>
@@ -159,7 +156,7 @@
             <div class="menu">
                 <img src="images/logo_white.png" alt="m1">
                 <h1>MENU</h1>
-                <!-- <p>Thats what we are</p> -->
+                
             </div>
             <p class="space">Thats what we are</p>
             <div class="icon">
@@ -167,14 +164,6 @@
                 <a href=""><img src="images/twitter.png" alt="t"></a>
                 <a href=""></a><img src="images/pinterest.png" alt="p">
 
-
-                <!-- <div class="icons">
-                    <a href="https://www.facebook.com/" target="_blank"> <img src="images/facebook.png" alt="f"></a>
-                    <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="t"></a>
-                    <a href="https://ke.linkedin.com/" target="_blank"> <img src="images/pinterest.png" alt="p"></a>
-                    <p class="copyright">&copy; 2015 copyright: <a href="https://www.instagram.com/"
-                            target="_blank">Meru
-                            Restaurant</a></p> -->
             </div>
         </div>
     </div>
