It will add buttons and styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
             <div class="description">
                 <p>We Provide The Best Food <br>
-                    At The <b>Right Price</b></p>
+                At The <b>Right Price</b>
+                </p>
             </div>
         </div>
     </main>
@@ -57,6 +58,7 @@
                         id quo accusantium, <br> magnam excepturi nisi mollitia maiores deserunt autem culpa? <br> At
                         soluta
                         quisquam minima.</p>
+                    <button class="click">View Gallery</button>
                 </div>
             </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="container">
@@ -67,9 +69,11 @@
                         <h2>We also produce delicious drinks</h2>
 
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br> Excepturi, ratione
-                            consequuntur. Illo voluptatum dignissimos<br> molestias nisi. Iusto itaque unde molestias cumque minus?<br> Mollitia corrupti assumenda
+                            consequuntur. Illo voluptatum dignissimos<br> molestias nisi. Iusto itaque unde molestias
+                            cumque minus?<br> Mollitia corrupti assumenda
                             tempore tenetur harum odit aperiam?
                         </p>
+                        <button class="click">View Gallery</button>
                     </div>
                     <div class="block card">
 
@@ -99,6 +103,7 @@
                 </div>
 
                 <div class="snacks">
+                    <p> <i class="arrow left"></i></p>
                     <div class="beef">
                         <img src="images/beefBurger.jpg" alt="s1">
                         <p>Beef Burger</p>
@@ -111,6 +116,7 @@
                         <img src="images/chickenPizza.jpg" alt="s3">
                         <p>Chicken Pizza</p>
                     </div>
+                    <p> <i class="arrow right"></i></p>
                 </div>
             </div>
         </div><br><br><br>
@@ -123,9 +129,11 @@
                         highly
                         recommend them :|</p>
                     <div class="visitors">
+                        <p> <i class="direction left"></i></p>
                         <img src="images/p1.png" alt="p1">
                         <img src="images/p2.png" alt="p2">
                         <img src="images/p3.png" alt="p3">
+                        <p> <i class="direction right"></i></p>
                     </div>
                 </div>
                 <div class="vl col-md-2"></div>
@@ -156,7 +164,7 @@
             <div class="menu">
                 <img src="images/logo_white.png" alt="m1">
                 <h1>MENU</h1>
-                
+
             </div>
             <p class="space">Thats what we are</p>
             <div class="icon">
